@@ -1,6 +1,12 @@
 This file lists all changes made to the game driver in all glory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+23-Jan-2010 (Zesstra)
+  - get_type_info() failed to reference the function name it returns, causing
+    the string to loose refcounts and being eventually free'd erronenously.
+    (#712)
+    (efuns.c)
+
 23-Jan-2010 (Gnomi)
   - RTTC on a toplevel function call doesn't remove the first control
     stack frame anymore. (#715)
